syntax = "proto3";
package dev.fizlrock.waterwalk.grpc;


import "google/protobuf/timestamp.proto";


option java_multiple_files = true;
option java_package = "dev.fizlrock.waterwalk.grpc.api";


// Определяем gRPC-сервис
service WaterwalkService {

  // Location CRUD
  rpc getLocationList(SkipLimit) returns (stream Location);
  rpc createLocation(Location) returns (Void);
  rpc deleteLocation(DeleteLocationRq) returns (Void);
  rpc updateLocation(UpdateLocationRq) returns (Void);

}


message UpdateLocationRq {
  string old_name = 1;
  Location location = 2;
}

message DeleteLocationRq {
  string location_name = 1;
}


message DeleteRouteRq {
  string locaton_name = 1;
  string route_name = 2;
}


message Void {}

message SkipLimit {
  int64 skip = 1;
  int64 limit = 2;
}


message Location {
  string name = 2;
  string description = 3;
}


message Route {
  string name = 1;
  string comment = 2;
  int64 distance = 3; // дистанция в метрах
  RouteDifficulty difficulty = 4;
  int64 duration = 5; // продолжительность в минутах
  int64 price  = 6;// цена в рублях
}


enum RouteDifficulty {
  EASY = 0;
  MEDIUM = 1;
  HARD = 2;
}
